--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.maindiv{
+	display:flex;
+}
+
+#div3{
+	background-color:green;
+	width:100px;
+	height:100px;
+}
+#div1{
+	background-color:red;
+	width:100px;
+	height:100px;
+}
+#div2{
+	background-color:blue;
+	width:100px;
+	height:100px;
+}
